--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "require": {
         "slim/slim": "^4.8",
         "slim/psr7": "^1.4",
-        "slim/http": "^1.2"
+        "slim/http": "^1.2",
+        "slim/php-view": "^3.1",
+        "php-di/php-di": "^4"
     }
 }
