--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
         "slim/psr7": "^1.4",
         "slim/http": "^1.2",
         "slim/php-view": "^3.1",
-        "php-di/php-di": "^6.3"
+        "php-di/php-di": "^6.3",
+        "funct/funct": "^1.5",
+        "symfony/string": "^5.3",
+        "slim/flash": "^0.4.0"
     }
 }
